k8s/apps/timetrack/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: timetrack
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
spec:
  tls:
    - secretName: tls-timetrack
      hosts:
        - tt.lly.sh
  rules:
    - host: tt.lly.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: timetrack-server
                port:
                  name: http
